WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171848
Fix property names in ScrollingTreeScrollingNode::dumpProperties
https://bugs.webkit.org/show_bug.cgi?id=171848
Summary
Fix property names in ScrollingTreeScrollingNode::dumpProperties
Frédéric Wang Nélar
Reported
2017-05-08 22:40:58 PDT
Some property names are wrong.
Attachments
Patch
(1.50 KB, patch)
2017-05-08 22:41 PDT
,
Frédéric Wang Nélar
no flags
Details
Formatted Diff
Diff
Patch
(2.20 KB, patch)
2017-05-09 00:25 PDT
,
Frédéric Wang Nélar
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2017-05-08 22:41:34 PDT
Created
attachment 309471
[details]
Patch
Frédéric Wang Nélar
Comment 2
2017-05-09 00:25:09 PDT
Created
attachment 309482
[details]
Patch
Gyuyoung Kim
Comment 3
2017-05-09 02:11:46 PDT
Comment on
attachment 309482
[details]
Patch LGTM
WebKit Commit Bot
Comment 4
2017-05-09 02:41:52 PDT
Comment on
attachment 309482
[details]
Patch Clearing flags on attachment: 309482 Committed
r216488
: <
http://trac.webkit.org/changeset/216488
>
WebKit Commit Bot
Comment 5
2017-05-09 02:41:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug