Fix property names in ScrollingTreeScrollingNode::dumpProperties https://bugs.webkit.org/show_bug.cgi?id=171848

Patch by Frederic Wang <fwang@igalia.com> on 2017-05-09
Reviewed by Gyuyoung Kim.

No new tests, this function is only used for debugging purpose.

* page/scrolling/ScrollingTreeScrollingNode.cpp:
(WebCore::ScrollingTreeScrollingNode::dumpProperties):

Canonical link: https://commits.webkit.org/188768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216488 268f45cc-cd09-0410-ab3c-d52691b4dbfc